@@ -1,6 +1,10 @@
 Internal, very small, undocumented, or invisible changes
 ********************************************************
 
+Camlp5 Version 5.16:
+--------------------
+* [12 Aug 10] Added option "-ignloaddir" in "pa_r.ml".
+
 Camlp5 Version 5.14:
 ---------------------
 
