@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <!-- $Id: redef.html,v 1.1 2010/08/12 11:33:35 deraugla Exp $ -->
+  <!-- $Id: redef.html,v 1.2 2010/08/12 11:37:31 deraugla Exp $ -->
   <!-- Copyright (c) INRIA 2010 -->
   <title>Redefining OCaml syntax</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -21,14 +21,14 @@
 
 <p>Better than just <a href="syntext.html">syntax extensions</a>, it is
   possible to redefine the whole syntax of the language. For example,
-  for:<p>
+  to:</p>
 
 <ul>
-<li>defining your own syntax, like the <a href="revsynt.html">revised
+<li>define your own syntax, like the <a href="revsynt.html">revised
   syntax</a> does,</li>
-<li>having a version whose keywords are translated in your native
+<li>have a version whose keywords are translated in your native
   language,</li>
-<li>restricting the OCaml language,</li>
+<li>restrict the OCaml language,</li>
 <li>interpret XML (or other languages) as OCaml source,</li>
 <li>and so on...</li>
 </ul>
