@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: mk_q_MLast.sh,v 1.6 2007/09/10 01:17:54 deraugla Exp $
+# $Id: mk_q_MLast.sh,v 1.7 2010/08/12 11:39:42 deraugla Exp $
 
 IFILE=pa_r.ml
 OFILE=q_MLast.ml
@@ -7,7 +7,7 @@ if [ "$NAME" = "" ]; then NAME=camlp5; fi
 (
 sed -e '/^EXTEND$/,$d' $OFILE
 echo EXTEND
-ocamlrun ./${NAME}r -nolib -I . -I ../etc pa_macro.cmo q_MLast.cmo pa_extend.cmo pr_r.cmo pr_extend.cmo -quotify $IFILE | sed -e '1,/^EXTEND$/d' -e '/^END;$/,$d'
+ocamlrun ./${NAME}r -nolib -I . -I ../etc pa_macro.cmo q_MLast.cmo pa_extend.cmo pr_r.cmo pr_extend.cmo -ignloaddir -quotify $IFILE | sed -e '1,/^EXTEND$/d' -e '/^END;$/,$d'
 echo '  (* Antiquotations for local entries *)'
 sed -e '1,/Antiquotations for local entries/d' $OFILE
 )
