@@ -1,6 +1,9 @@
-(* camlp5r pa_extend.cmo q_MLast.cmo *)
+(* camlp5r *)
 (* This file has been generated by program: do not edit! *)
 (* Copyright (c) INRIA 2007-2010 *)
+
+(* #load "pa_extend.cmo" *)
+(* #load "q_MLast.cmo" *)
 
 open Pcaml;;
 
@@ -37,6 +40,10 @@ Grammar.Unsafe.clear_entry class_str_item;;
 
 Pcaml.parse_interf := Grammar.Entry.parse interf;;
 Pcaml.parse_implem := Grammar.Entry.parse implem;;
+
+Pcaml.add_option "-ignloaddir"
+  (Arg.Unit (fun _ -> add_directive "load" (fun _ -> ())))
+  "Ignore the #load directives in the input file.";;
 
 let mksequence2 loc =
   function
